objects/vlocity_cmt__AccountBalance__c.object
<CustomObject>
    <description>Represents a historical snapshot of charges, credits and resulting balance for an account at a point in time. Populates from a client&apos;s billing system.</description>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Balances</relationshipLabel>
        <relationshipName>AccountRegisters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Charges__c</fullName>
        <label>Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Credit__c</fullName>
        <label>Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DueDate__c</fullName>
        <description>Due date for this Account Balance record</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastBillAmount__c</fullName>
        <description>Last Bill Amount for this Account Balance.</description>
        <label>Last Bill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPaymentAmount__c</fullName>
        <description>The amount that customer paid for the last bill.</description>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LastPaymentDate__c</fullName>
        <description>The date on which last bill was paid.</description>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LatePaymentFee__c</fullName>
        <description>Past bill late payment fee.</description>
        <label>Late Payment Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PastDueBalance__c</fullName>
        <description>Past bill due that is left unpaid.</description>
        <label>Past Due Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PastDueDate__c</fullName>
        <description>Past bill&apos;s due date.</description>
        <label>Past Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SubscriptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription to which this Account Balance record is associated with.</description>
        <label>Subscription</label>
        <referenceTo>vlocity_cmt__Subscription__c</referenceTo>
        <relationshipLabel>Account Balances</relationshipLabel>
        <relationshipName>AccountBalances</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account Balance</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Account Balance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Balances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>